--- a/mail_broker_telegram/views/mail_broker.xml
+++ b/mail_broker_telegram/views/mail_broker.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <!-- Copyright 2021 Creu Blanca
+     Copyright 2024 Dixmit
      License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl). -->
 <odoo>
 
