--- a/mail_broker_telegram/views/mail_broker.xml
+++ b/mail_broker_telegram/views/mail_broker.xml
@@ -15,6 +15,35 @@
                     attrs="{'invisible': ['|', ('broker_type', '!=', 'telegram'), ('has_new_channel_security', '=', False)], 'required': [('broker_type', '=', 'telegram'), ('has_new_channel_security', '=', True)]}"
                 />
             </field>
+            <notebook position="inside">
+                <page
+                    name="telegram"
+                    string="Telegram configuration"
+                    attrs="{'invisible': [('broker_type', '!=', 'telegram')]}"
+                >
+                    <div>
+                        <ol>
+                            <li>Access Telegram and start a converstation with <a
+                                    href="https://t.me/BotFather"
+                                    target="_blank"
+                                    rel="noopener noreferrer"
+                                >BotFather</a>.</li>
+                            <li
+                            >Create a bot using the command /newbot. The system will ask for a bot name. Remember that it needs to end with the word bot.</li>
+                            <li>Copy the <b
+                                >token to access the HTTP API</b> to the token field.</li>
+                            <li>Press the Integrate webhook button  </li>
+                        </ol>
+                    </div>
+                    <div>
+                        If you want to add an extra layer of security, you can check <b
+                        >Has New Channel Security</b>
+                        and define a <b>Telegram security key</b>.
+                        New chats will be created only with the command <b
+                        >/start SECURITY_KEY</b>.
+                    </div>
+                </page>
+            </notebook>
         </field>
     </record>
 
