[IMP] mail_broker: allow edition of channel names. Improve help and readme

--- a/mail_broker/views/mail_broker.xml
+++ b/mail_broker/views/mail_broker.xml
@@ -73,14 +73,14 @@
         </field>
     </record>
     <record model="ir.actions.act_window" id="mail_broker_act_window">
-        <field name="name">Mail Broker</field>
+        <field name="name">Broker</field>
         <field name="res_model">mail.broker</field>
         <field name="view_mode">tree,form</field>
         <field name="domain">[]</field>
         <field name="context">{}</field>
     </record>
     <record model="ir.ui.menu" id="mail_broker_menu">
-        <field name="name">Mail Broker</field>
+        <field name="name">Broker</field>
         <field name="parent_id" ref="base.menu_email" />
         <field name="action" ref="mail_broker_act_window" />
         <field name="sequence" eval="16" />
