[FIX] mail_broker_whatsapp: Fix text

--- a/mail_broker_whatsapp/wizards/whatsapp_composer.xml
+++ b/mail_broker_whatsapp/wizards/whatsapp_composer.xml
@@ -29,7 +29,7 @@
                     />
                     <button
                         name="action_view_whatsapp"
-                        string="Show log"
+                        string="Show Chat"
                         type="object"
                     />
                     <button string="Cancel" class="btn-default" special="cancel" />
